--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
 }
 
@@ -70,4 +71,13 @@ dependencies {
     // SplashScreen
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
+
+    //Hilt and Dagger
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+}
+
+// Allow references to generated code used for hilt
+kapt {
+    correctErrorTypes true
 }
