--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     //Hilt and Dagger
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 }
 
 // Allow references to generated code used for hilt
